--- a/Marvels-tp2/templates/index.hbs
+++ b/Marvels-tp2/templates/index.hbs
@@ -1,10 +1,25 @@
 
+{{> header}}
+
 <div class="container-fluid m-2 p-5 bg-primary text-center">
     <h1>Les Marvels</h1>
 </div>
-<div class="container m-2 p-5 bg-primary  text-center">
-    <h2>Mes comics</h2>
 
+<div class="container mt-5">
+  <div class="row">
+    {{#each characters}}
+      <div class="col-md-4 mb-4">
+        <div class="card">
+          <img src="{{imageUrl}}" class="card-img-top" alt="{{name}}">
+          <div class="card-body">
+            <h5 class="card-title">{{name}}</h5>
+          </div>
+        </div>
+      </div>
+    {{/each}}
+  </div>
 </div>
+
+{{> footer}}
 
 
