fin de Étape 5 – C’est dans la boite !
+change bgcolor of footer

--- a/Marvels-tp2/templates/footer.hbs
+++ b/Marvels-tp2/templates/footer.hbs
@@ -1,8 +1,8 @@
 <footer class="bg-body-tertiary text-center text-lg-start">
   <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+  <div class="text-center p-3" style="background-color: rgb(58,63,68);">
     © 2024 Copyright:
-    <a class="text-body" href="https://mdbootstrap.com/">Marvels_Bootstrap.com</a>
+    <a class="text-body" href="https://mdbootstrap.com/">Marvels-mdBootstrap.com</a>
   </div>
   <!-- Copyright -->
 </footer>
